--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,36 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+node_modules
+/dist
+.parcel-cache
 
+# local env files
+.env.local
+.env.*.local
+.env.prod
+.env.staging
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# App related
+.env
+.graphqlconfig
+schema.graphql
+
+.npmrc
+
+.serverless
+
+test.js
