--- a/package.json
+++ b/package.json
@@ -10,11 +10,49 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1"
   },
+  "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.2",
+    "@svgr/webpack": "^6.2.0",
+    "babel-loader": "^8.2.3",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-styled-components": "^2.0.1",
+    "core-js": "^3.19.1",
+    "css-loader": "^6.5.1",
+    "dotenv-cli": "^4.1.1",
+    "dotenv-webpack": "^7.1.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-babel-module": "^5.3.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "prettier": "^2.4.1",
+    "react-refresh": "^0.11.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
+    "serverless": "^3.1.1",
+    "serverless-cloudfront-invalidate": "^1.11.0",
+    "serverless-s3-sync": "^1.17.3",
+    "style-loader": "^3.3.1",
+    "testcafe": "^1.18.5",
+    "webpack": "^5.64.2",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0"
+  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "dotenv webpack -- --node-env production",
+    "deploy": "dotenv serverless deploy",
+    "lint": "eslint src/**",
+    "start": "dotenv webpack serve",
+    "test": "node test"
   },
   "eslintConfig": {
     "extends": [
